--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+workflow:
+  rules:
+    - if: branch is not master
+    - if: $CI_COMMIT_BRANCH !="master"
+      when: never
+    - when: always
+
 stages:
   - test
   - build
@@ -18,6 +25,7 @@ run_unit_test:
   after_script:
     - echo "clean"
     
+
 run_lint_tests:
   stage: test
   before_script:
@@ -28,12 +36,16 @@ run_lint_tests:
     - echo "clearing test"
 
 build_image:
+  # only:
+  #   - master
   stage: build
   script:
     - echo "buil the image"
     - echo "tagg image"
 
 push_image:
+  # only:
+  #   - master
   stage: build
   needs:
     - build_image 
