--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 workflow:
   rules:
-    - if: branch is not master
+#if branch is not master
     - if: $CI_COMMIT_BRANCH !="master"
       when: never
     - when: always
