--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ workflow:
   rules:
 #if branch is not master
     - if: $CI_COMMIT_BRANCH !="master"
-    - when: always
+    - when: never
 
 stages:
   - test
