--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,10 @@
 workflow:
   rules:
 #if branch is not master
-    - if: $CI_COMMIT_BRANCH !="master"
-    - when: never
+    - if: $CI_COMMIT_BRANCH != "master"
+      when: never
+    - when: always
+
 
 stages:
   - test
