--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-workflow:
-  rules:
-#if branch is not master
-    - if: $CI_COMMIT_BRANCH != "master" && $CI_PIPELINE_SOURCE != "merge_request_event"
-      when: never
-#    - when: always
+# workflow:
+#   rules:
+# #if branch is not master
+#     - if: $CI_COMMIT_BRANCH != "master" && $CI_PIPELINE_SOURCE != "merge_request_event"
+#       when: never
+# #    - when: always
 
 stages:
   - test
