--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,8 @@ run_unit_test:
     
 
 run_lint_tests:
-  # only:
-  #   - test
+  only:
+    - test
   stage: test
   before_script:
     - echo "preparing test"
@@ -39,16 +39,16 @@ run_lint_tests:
     - echo "clearing test"
 
 build_image:
-  # only:
-  #   - master
+  only:
+    - master
   stage: build
   script:
     - echo "buil the image"
     - echo "tagg image"
 
 push_image:
-  # only:
-  #   - master
+  only:
+    - master
   stage: build
   needs:
     - build_image 
@@ -58,6 +58,8 @@ push_image:
 
 
 deploy_image:
+  only:
+    - master2
   stage: deploy
   script:
     - echo "loog docker regs"
