--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-# workflow:
-#   rules:
-# #if branch is not master
-#     - if: $CI_COMMIT_BRANCH != "master" && $CI_PIPELINE_SOURCE != "merge_request_event"
-#       when: never
-# #    - when: always
+workflow:
+  rules:
+#if branch is not master
+    - if: $CI_COMMIT_BRANCH != "master" && $CI_PIPELINE_SOURCE != "merge_request_event"
+      when: never
+    - when: always
 
 stages:
   - test
@@ -12,8 +12,8 @@ stages:
 
 #test#
 run_unit_test:
-  only:
-    - master
+  # only:
+  #   - master
   stage: test
   before_script:
     - echo "preparando testes"
@@ -28,8 +28,8 @@ run_unit_test:
     
 
 run_lint_tests:
-  only:
-    - test
+  # only:
+  #   - test
   stage: test
   before_script:
     - echo "preparing test"
@@ -39,16 +39,16 @@ run_lint_tests:
     - echo "clearing test"
 
 build_image:
-  only:
-    - master
+  # only:
+  #   - master
   stage: build
   script:
     - echo "buil the image"
     - echo "tagg image"
 
 push_image:
-  only:
-    - master
+  # only:
+  #   - master
   stage: build
   needs:
     - build_image 
@@ -58,8 +58,8 @@ push_image:
 
 
 deploy_image:
-  only:
-    - master2
+  # only:
+  #   - master2
   stage: deploy
   script:
     - echo "loog docker regs"
