--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ run_unit_test:
   #   - master
   stage: test
   before_script:
-    - echo "preparando testes"
+    - echo "preparando testes for $MICRO_SERVICE_NAME"
     - pwd
     - ls
     - mkdir test-data
@@ -62,6 +62,6 @@ deploy_image:
   #   - master2
   stage: deploy
   script:
-    - echo "loog docker regs"
+    - echo "loog docker regs TO $DEPLOYMENT_ENVIRONMENT"
     - echo "Push docker image"
 
