--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,56 +12,63 @@ stages:
 
 #test
 run_unit_test:
+  image: node:17-alpine3.14
+  # - tags:
+  #   - runners?
+  #   - runner2?
   # only:
   #   - master
   stage: test
   before_script:
-    - echo "preparando testes for $MICRO_SERVICE_NAME"
-    - pwd
-    - ls
-    - mkdir test-data
-    - ls
+    # - echo "preparando testes for $MICRO_SERVICE_NAME"
+    # - pwd
+    # - ls
+    # - mkdir test-data
+    # - ls
+    - cd app
+    - npm install
   script:
     - echo "run teste"
+    - npm install
   after_script:
     - echo "clean"
     
 
-run_lint_tests:
-  # only:
-  #   - test
-  stage: test
-  before_script:
-    - echo "preparing test"
-  script:  
-    - echo "running"
-  after_script:
-    - echo "clearing test"
+# run_lint_tests:
+#   # only:
+#   #   - test
+#   stage: test
+#   before_script:
+#     - echo "preparing test"
+#   script:  
+#     - echo "running"
+#   after_script:
+#     - echo "clearing test"
 
-build_image:
-  # only:
-  #   - master
-  stage: build
-  script:
-    - echo "buil the image"
-    - echo "tagg image"
+# build_image:
+#   # only:
+#   #   - master
+#   stage: build
+#   script:
+#     - echo "buil the image"
+#     - echo "tagg image"
 
-push_image:
-  # only:
-  #   - master
-  stage: build
-  needs:
-    - build_image 
-  script:
-    - echo "loog docker regs"
-    - echo "Push docker image"
+# push_image:
+#   # only:
+#   #   - master
+#   stage: build
+#   needs:
+#     - build_image 
+#   script:
+#     - echo "loog docker regs"
+#     - echo "Push docker image"
 
 
-deploy_image:
-  # only:
-  #   - master2
-  stage: deploy
-  script:
-    - echo "loog docker regs TO $DEPLOYMENT_ENVIRONMENT  using $PROPERTIES_FILE"
-    - echo "Push docker image"
+# deploy_image:
+#   # only:
+#   #   - master2
+#   stage: deploy
+#   script:
+#     - echo "loog docker regs TO $DEPLOYMENT_ENVIRONMENT  using $PROPERTIES_FILE"
+#     - echo "Push docker image"
 
