--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ run_unit_test:
     - npm install
   script:
     - echo "run teste"
-    - npm install
+    - npm test
   artifacts:
     when: always
     reports:
