--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,6 @@ run_unit_test:
 #     - echo "clearing test"
 
 build_image:
-  image: node:17-alpine3.14
   # - tags:
   #   - runners?
   #   - runner2?
@@ -62,7 +61,6 @@ build_image:
     - docker build -t registry.gitlab.com/devops-test-d/gitlab-project1:1.0 .
 
 push_image:
-  image: node:17-alpine3.14
   # - tags:
   #   - runners?
   #   - runner2?
@@ -70,7 +68,7 @@ push_image:
   #   - master
 #   # only:
 #   #   - master
-  stage: deploy
+  stage: build
   needs:
     - build_image 
   before_script:
