--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build_image:
   stage: build
   script:
     - echo "buil the image"
-    - docker build -t registry.gitlab.com/devops-test-d/gitlab-project1:1.0 .
+    - docker build -t $CI_REGISTRY_IMAGE:1.0 .
 
 push_image:
   # - tags:
@@ -72,10 +72,13 @@ push_image:
   needs:
     - build_image 
   before_script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD registry.gitlab.com
+    - echo "docker registry is $CI_REGISTRY"
+    - echo "docker username is $CI_REGISTRY_USER"
+    - echo "docker image repo is $CI_REGISTRY_IMAGE"
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo "docker push"
-    - docker push registry.gitlab.com/devops-test-d/gitlab-project1:1.0
+    - docker push $CI_REGISTRY_IMAGE:1.0
 
 
 # deploy_image:
