--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,9 @@ run_unit_test:
   after_script:
     - echo "clean"
     
+image: gitlab/dind
+services:
+  - docker:dind
 
 # run_lint_tests:
 #   # only:
@@ -51,9 +54,9 @@ run_unit_test:
 
 build_image:
   #https://stackoverflow.com/questions/51196435/gitlab-ci-docker-command-not-found
-  image: gitlab/dind
-  services:
-    - docker:dind
+  # image: gitlab/dind
+  # services:
+  #   - docker:dind
   # - tags:
   #   - runners?
   #   - runner2?
@@ -67,9 +70,9 @@ build_image:
 
 
 push_image:
-  image: gitlab/dind
-  services:
-    - docker:dind
+  # image: gitlab/dind
+  # services:
+  #   - docker:dind
   # - tags:
   #   - runners?
   #   - runner2?
