--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,6 +90,7 @@ push_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo "docker push"
+    - docker tag $CI_REGISTRY_IMAGE $CI_REGISTRY_IMAGE:1.0
     - docker push $CI_REGISTRY_IMAGE:1.0
 
 
