--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,14 @@
 #       when: never
 #     - when: always
 #
+
+
+
+# variables:
+##   IMAGE_NAME: $CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE
+#   IMAGE_NAME: $CI_REGISTRY_IMAGE
+#   IMAGE_TAG: "1.1"
+
 stages:
   - test
   - build
@@ -71,6 +79,8 @@ build_image:
   script:
     - echo "buil the image"
     - docker build -t $CI_REGISTRY_IMAGE/microservice/payment:1.0 .
+  #  - docker build -t $CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE:1.0 .
+  #  - docker build -t $IMAGE_NAME:$IMAGE_TAG . 
 
 
 
@@ -97,13 +107,22 @@ push_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo "docker push"
-    - docker push $CI_REGISTRY_IMAGE/microservice/payment:1.0
+    - docker push $CI_REGISTRY_IMAGE/microservice/$payment:1.0 :1.0
+#    - docker push $IMAGE_NAME:$IMAGE_TAG
 
 
-# deploy_image:
-#   # only:
-#   #   - master2
+
+# deploy_to_dev:
+# #   # only:
+# #   #   - master2
 #   stage: deploy
+#   tags:
+#     - ec2
+#   script:
+#     - ssh -o StricHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "ls -l"
+#   #  ssh -p 2205 root@192.168.1.110
+
+   
 #   script:
 #     - echo "loog docker regs TO $DEPLOYMENT_ENVIRONMENT  using $PROPERTIES_FILE"
 #     - echo "Push docker image"
