--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,7 +107,7 @@ push_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo "docker push"
-    - docker push $CI_REGISTRY_IMAGE/microservice/$payment:1.0
+    - docker push $CI_REGISTRY_IMAGE/microservice/payment:1.0
 #    - docker push $IMAGE_NAME:$IMAGE_TAG
 
 
