--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,14 +112,12 @@ push_image:
 
 
 
-# deploy_to_dev:
-# #   # only:
-# #   #   - master2
-#   stage: deploy
-#   tags:
-#     - ec2
-#   script:
-#     - ssh -o StricHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "ls -l"
+deploy_to_dev:
+  stage: deploy
+  tags:
+    - ec2
+  script:
+    - ssh -o StricHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "ls -l"
 #   #  ssh -p 2205 root@192.168.1.110
 
    
