--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,7 +117,7 @@ deploy_to_dev:
   tags:
     - ec2
   script:
-    - ssh -o StricHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "ls -l"
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "ls -l"
 #   #  ssh -p 2205 root@192.168.1.110
 
    
