--- a/compose.gitlab-ci.yml
+++ b/compose.gitlab-ci.yml
@@ -119,10 +119,15 @@ deploy_to_dev:
   before_script:
     - chmod 400 $SSH_PRIVATE_KEY
   script:
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker run -d -p 3000:3000 $CI_REGISTRY_IMAGE/microservice/payment:1.0"
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker-compose -f docker-compose.yaml down && docker-compose -f docker-compose.yaml up -d"
 #   #  ssh -p 2205 root@192.168.1.110
 
-   
+  # environment:
+  #   name: development
+  #   url: http://awsurl:3000
+
+
+
 #   script:
 #     - echo "loog docker regs TO $DEPLOYMENT_ENVIRONMENT  using $PROPERTIES_FILE"
 #     - echo "Push docker image"
