--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,5 +2,6 @@ version: "3.3"
 services:
   app:
     image: $CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE:1.2
+   # image: ${DC_IMAGE_NAME}:${DC_IMAGE_TAG}
     ports:
       - 3000:3000
