--- a/multistage-gitlab-ci.yml
+++ b/multistage-gitlab-ci.yml
@@ -13,6 +13,13 @@
 #   IMAGE_NAME: $CI_REGISTRY_IMAGE
 #   IMAGE_TAG: "1.1"
 
+variables:
+#   IMAGE_NAME: $CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE
+  IMAGE_NAME: $CI_REGISTRY_IMAGE
+  DEV_SERVER_HOST: 35.80.452.22
+  IMAGE_TAG: "1.1"
+  DEV_ENDPOINT: http://ec2-3-3.amazon.com
+
 stages:
   - test
   - build
@@ -29,6 +36,10 @@ run_unit_test:
   # only:
   #   - master
   stage: test
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    paths:
+      - app/node_modules
   before_script:
     # - echo "preparando testes for $MICRO_SERVICE_NAME"
     # - pwd
@@ -76,9 +87,17 @@ build_image:
   stage: build
   tags:
     - ec2
+  before_script:
+        - export PACKAGE_JSON_VERSION=$(cat app/package.json |jq -r .version)
+        - export VERSION=$PACKAGE_JSON_VERSION.$CI_PIPELINE_IID
+        - echo $VERSION > version-file.txt
   script:
     - echo "buil the image"
-    - docker build -t $CI_REGISTRY_IMAGE/microservice/payment:1.0 .
+    - docker build -t $IMAGE_NAME:$APP_VERSION .
+  artifacts:
+    paths:
+      - version-file.txt
+    # - docker build -t $CI_REGISTRY_IMAGE/microservice/payment:1.0 .
   #  - docker build -t $CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE:1.0 .
   #  - docker build -t $IMAGE_NAME:$IMAGE_TAG . 
 
@@ -98,16 +117,19 @@ push_image:
   stage: build
   needs:
     - build_image
+  dependencies:
+    - build_image
   tags: 
     - ec2
   before_script:
     - echo "docker registry is $CI_REGISTRY"
     - echo "docker username is $CI_REGISTRY_USER"
     - echo "docker image repo is $CI_REGISTRY_IMAGE"
+    - export VERSION=$(cat version-file.txt)
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - echo "docker push"
-    - docker push $CI_REGISTRY_IMAGE/microservice/payment:1.0
+    - docker push $IMAGE_NAME:$VERSION
 #    - docker push $IMAGE_NAME:$IMAGE_TAG
 
 
@@ -118,13 +140,14 @@ deploy_to_dev:
     - ec2
   before_script:
     - chmod 400 $SSH_PRIVATE_KEY
+    - export VERSION=$(cat version-file.txt)
   script:
     - scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./docker-compose.yaml vader@192.168.1.110:/home/vader
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY -p 2205 vader@192.168.1.110 "
     docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && 
 
     export DC_IMAGE_NAME=$IMAGE_NAME &&
-    export DC_IMAGE_TAG=$IMAGE_TAG &&
+    export DC_IMAGE_TAG=$VERSION &&
 
     docker-compose down && 
     docker-compose up -d"
@@ -133,6 +156,7 @@ deploy_to_dev:
   # environment:
   #   name: development
   #   url: http://awsurl:3000
+
 
 
 
